src/main/java/com/example/demo/config/error/ApiError.java
package com.example.demo.config.error;

public class ApiError {
}
